Fix dropdown overflow

--- a/app/assets/stylesheets/components/code_listing.css.scss
+++ b/app/assets/stylesheets/components/code_listing.css.scss
@@ -188,6 +188,10 @@ $annotation-info: $info;
 
     d-user-annotation {
       display: block;
+
+      .dropdown {
+        position: static;
+      }
     }
 
     .fake-input {
